# wordtwist

./: .gitignore  Cargo.toml  Makefile  TODO  dev.sh
.github/workflows/: server_ci.yml
client/: index.html  package.json  tailwind.config.cjs  vite.config.ts
client/src/: @types.ts  App.tsx  index.css
client/src/components/: Header.tsx
client/src/components/gameboard/: GameBoard.css  GameBoard.tsx  GameOptions.tsx  GameResults.tsx  Letter.tsx
client/src/components/login/: Login.tsx  LoginRegister.tsx
client/src/hooks/: useLocalStorageState.tsx  useTimeoutState.tsx
server/: Cargo.toml
server/web/: Cargo.toml
server/web/migrations/: 2_daily.sql  3_user.sql  4_scores.sql  5_score_metadata.sql  6_game_size.sql  7_score_unique_idx.sql  setup.sql
server/web/src/: db.rs  game.rs  main.rs  routes.rs  user.rs  ws.rs
server/web/src/db/: game.rs  score.rs  user.rs
server/web/src/game/: daily.rs
server/web/src/routes/: game.rs  user.rs
server/wordtwist/: Cargo.toml  words.txt
server/wordtwist/src/: game.rs  words.rs
server/wordtwist/util/: filter.py
src/: game.rs  lib.rs  main.rs  words.rs
