[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
axum-extra = { version = "0.4.2", features = ["spa"] }
tokio = {version = "1", features = ["full"]}
wordtwist = { path = "../wordtwist"}
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"]}