[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
axum-extra = { version = "0.8.0", features = ["cookie", "cookie-signed"] }
tokio = { version = "1", features = ["full"] }
wordtwist = { path = "../wordtwist" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
chrono = "0.4.23"
argon2 = { version = "0.5.0", features = ["password-hash"] }
anyhow = "1.0.69"
tower-http = { version = "0.4.4", features = ["fs"] }
cookie = "0.18"
